Fix the datagrid text overflow 1.9.4 Signed-off-by: Yogi_Wang <yawang@vmware.com>

--- a/src/portal/src/app/project/tag-retention/tag-retention.component.scss
+++ b/src/portal/src/app/project/tag-retention/tag-retention.component.scss
@@ -58,6 +58,17 @@
 .font-size-54 {
   font-size: .541667rem;
 }
+
 .padding-left-4 {
   padding-left: 4px;
+}
+
+::ng-deep {
+  .datagrid-row-flex {
+    .datagrid-row-detail {
+      .datagrid-cell {
+        padding: 11px 12px;
+      }
+    }
+  }
 }
